# park-run-app

./: .gitignore  README.md  main.py  menu.py  pyproject.toml  runners.csv  test.ipynb  utils.py  volu.csv
atxivpages/: FF.py  age_groups.py  orgs_table.py  report.py  short_output.py  subbota.py  tags.py  test_orgs.py  test_runners.py  test_users.py
pages/: about.py  age_groups.py  almost_club.py  hellothere.py  home.py  last_results.py  login_page.py  main_table.py  orgs_table.py  records_table.py  report.py  subbota.py  tags.py  test.py  test2.py  test_ff.py  test_users.py  update.py
